# Atom-work

./: atom_mathematica.m
analyses/ATLAS-CONF-2016-054/: ATLAS_CONF_2016_054.cc  ATLAS_CONF_2016_054.info  Analyses_hash.txt  CMakeCache.txt  Makefile  addAnalysisPath.csh  addAnalysisPath.sh  cmake_install.cmake  libAtom_ATLAS_CONF_2016_054.dylib
analyses/ATLAS_1308_1841/: ATLAS_1308_1841.cc  ATLAS_1308_1841.info  info.txt
analyses/ATLAS_1402_7029/: ATLAS_1402_7029.cc  ATLAS_1402_7029.info  info.txt
analyses/ATLAS_1403_4853/: ATLAS_1403_4853.cc  ATLAS_1403_4853.info  info.txt
analyses/ATLAS_1403_5294/: ATLAS_1403_5294.cc  ATLAS_1403_5294.info  info.txt
analyses/ATLAS_1405_7875/: ATLAS_1405_7875.cc  ATLAS_1405_7875.info  info.txt
analyses/ATLAS_1406_1122/: ATLAS_1406_1122.cc  ATLAS_1406_1122.info  info.txt
analyses/ATLAS_1407_0583/: ATLAS_1407_0583.cc  ATLAS_1407_0583.info  info.txt
analyses/ATLAS_1407_0600/: ATLAS_1407_0600.cc  ATLAS_1407_0600.info  info.txt
analyses/ATLAS_1602_06194/: ATLAS_1602_06194.cc  ATLAS_1602_06194.info  info.txt
analyses/ATLAS_1605_03814/: ATLAS_1605_03814.cc  ATLAS_1605_03814.info  setup.sh
analyses/ATLAS_CONF_2016_037/: ATLAS_CONF_2016_037.cc  ATLAS_CONF_2016_037.info  CMakeLists.txt  info.txt
analyses/ATLAS_CONF_2016_038/: ATLAS_CONF_2016_038.cc  ATLAS_CONF_2016_038.info  Analyses_hash.txt  CMakeCache.txt  Makefile  addAnalysisPath.csh  addAnalysisPath.sh  cmake_install.cmake  libAtom_ATLAS_CONF_2016_038.dylib
analyses/ATLAS_CONF_2016_050/: ATLAS_CONF_2016_050.cc  ATLAS_CONF_2016_050.info  info.txt
analyses/ATLAS_CONF_2016_052/: ATLAS_CONF_2016_052.cc  ATLAS_CONF_2016_052.info  atom.runscript  info.txt
analyses/ATLAS_CONF_2016_054/: ATLAS_CONF_2016_054.cc  Analyses_hash.txt  CMakeCache.txt  Makefile  addAnalysisPath.csh  addAnalysisPath.sh  cmake_install.cmake  libAtom_ATLAS_CONF_2016_054.dylib  setup.sh
analyses/ATLAS_CONF_2016_066/: ATLAS_CONF_2016_066.cc  ATLAS_CONF_2016_066.info  Analyses_hash.txt  CMakeCache.txt  Makefile  addAnalysisPath.csh  addAnalysisPath.sh  cmake_install.cmake  libAtom_ATLAS_CONF_2016_066.dylib
analyses/ATLAS_CONF_2016_076/: ATLAS_CONF_2016_076.cc  ATLAS_CONF_2016_076.info  Analyses_hash.txt  CMakeCache.txt  Makefile  addAnalysisPath.csh  addAnalysisPath.sh  cmake_install.cmake  info.txt
analyses/ATLAS_CONF_2016_077/: ATLAS_CONF_2016_077.cc  ATLAS_CONF_2016_077.info  Analyses_hash.txt  CMakeCache.txt  CMakeLists.txt  Makefile  addAnalysisPath.csh  addAnalysisPath.sh  cmake_install.cmake  info.txt  libAtom_ATLAS_CONF_2016_077.dylib
analyses/ATLAS_CONF_2016_078/: ATLAS_CONF_2016_078.cc  ATLAS_CONF_2016_078.info  atom.runscript  info.txt
analyses/ATLAS_CONF_2016_084/: ATLAS_CONF_2016_084.cc  ATLAS_CONF_2016_084.info
analyses/ATLAS_CONF_2016_093/: ATLAS_CONF_2016_093.cc  ATLAS_CONF_2016_093.info  info.txt
analyses/ATLAS_CONF_2016_096/: ATLAS_CONF_2016_096.cc  ATLAS_CONF_2016_096.info  info.txt
analyses/ATLAS_CONF_2016_098/: ATLAS_CONF_2016_098.cc  ATLAS_CONF_2016_098.info  info.txt
objects/CMS8_leptons/: CMS_1402_0923.cc  atom_mathematica.nb  info.txt
objects/WZ_ATLAS13/: ATLAS_1603_09222.cc  ATLAS_1603_09222.info  ATLAS_Zee.yoda  ATLAS_Zmm.yoda  Zee.runscript  Zee.yaml  Zee.yoda  Zmm.runscript  Zmm.yaml  Zmm.yoda  atom_mathematica.nb  info.txt
objects/bjet_CMS8/: Analyses_hash.txt  CMS_1211_4462.cc  CMS_bjet.yoda  CMakeCache.txt  CMakeLists.txt  Makefile  addAnalysisPath.csh  addAnalysisPath.sh  atom_mathematica.nb  cmake_install.cmake
objects/electron_ATLAS8/: ATLAS_1407_5063.cc  ATLAS_1407_5063.info  Zee.yoda  atom_mathematica.nb  info.txt
objects/jets_ATLAS_run1/: ATLAS_1410_7238.cc  ATLAS_1410_7238.info  WW.runscript  WW.yoda  WW_en.yoda  WW_mg5.runscript  WW_mg5.yoda  WW_mg5_off.yoda  WW_mn.yoda  WW_off.yoda  WWj_mg5.runscript  WWj_mg5.yoda  WWj_mg5_off.yoda  Zee.yoda  atom_mathematica.nb  info.txt
objects/leptons_CMS8/: CMS_1402_0923.cc  CMS_1402_0923.info  CMS_Zee.yoda  CMS_Zmm.yoda  CMakeLists.txt  Zee.runscript  Zee.yoda  Zmm.yoda  atom_mathematica.nb  info.txt
objects/leptons_CMS8/EventInfo/: LHC7-Zmm.in  LHC8-Zee.in
objects/muon_ATLAS8/: ATLAS_1407_3935.cc  ATLAS_1407_3935.info  ATLAS_Zmm.yoda  Zmm.runscript  Zmm.yoda  atom_mathematica.nb  info.txt
objects/photon_ATLAS13/: ATLAS_1606_03833.cc  ATLAS_1606_03833.info  ATLAS_rs.yoda  Analyses_hash.txt  CMakeCache.txt  Makefile  Run01.bib  addAnalysisPath.csh  addAnalysisPath.sh  atom_mathematica.nb  cmake_install.cmake  info.txt  libAtom_ATLAS_1606_03833.dylib  projections.dot  rs.runscript  rs.yaml  rs.yoda  rs_nosmear.yaml  rs_nosmear.yoda
objects/photon_ATLAS8/: ATLAS_1408_7084.cc  ATLAS_1408_7084.info  ATLAS_gghaa_central_high.yoda  ATLAS_gghaa_forward_low.yoda  Analyses_hash.txt  CMakeCache.txt  Makefile  Run01.bib  addAnalysisPath.csh  addAnalysisPath.sh  atom_mathematica.nb  cmake_install.cmake  gghaa.runscript  gghaa.yaml  gghaa.yoda  info.txt  libAtom_ATLAS_1408_7084.dylib  projections.dot
objects/template/: ATLAS_Zee.yoda  Zee.runscript  info.txt  readme.txt
temp/ATLAS_1605_03814/: .atom_history  2jl.card  ATLAS_1605_03814.yoda  Analyses_hash.txt  CMakeCache.txt  GG1step_1600_0.card  GG1step_1600_0.script  GG1step_1600_0.yaml  GG_1step_1600_0.script  GGdirect_1100_700.card  GGdirect_1100_700.script  GGdirect_1100_700.yaml  GGdirect_1600_0.card  GGdirect_1600_0.script  GGdirect_1600_0.yaml  Makefile  QQdirect.card  QQdirect.script  QQdirect.yaml  Run01.bib  addAnalysisPath.csh  addAnalysisPath.sh  card.defo  (+10 more)
(+84 files in other folders)
